unpackaged/objects/Summation__c.object
<CustomObject>
    <fields>
        <fullName>Total_Games__c</fullName>
        <formula>Total_Losses__c + Total_Wins__c + Total_Ties__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Games</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Losses__c</fullName>
        <label>Total Losses</label>
        <summarizedField>Result_Set__c.Loss__c</summarizedField>
        <summaryForeignKey>Result_Set__c.Summation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Ties__c</fullName>
        <label>Total Ties</label>
        <summarizedField>Result_Set__c.Tie__c</summarizedField>
        <summaryForeignKey>Result_Set__c.Summation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Wins__c</fullName>
        <label>Total Wins</label>
        <summarizedField>Result_Set__c.Win__c</summarizedField>
        <summaryForeignKey>Result_Set__c.Summation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Win_Ratio__c</fullName>
        <formula>Total_Wins__c /  Total_Games__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Win Ratio</label>
        <precision>18</precision>
        <scale>18</scale>
        <type>Number</type>
    </fields>
    <label>Summation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Sum: {0000000}</displayFormat>
        <label>Summation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>